--- a/config.toml
+++ b/config.toml
@@ -4,5 +4,12 @@ title = "My New Hugo Site"
 publishDir = "docs"
 
 [module]
+
   [[module.imports]]
     path = "github.com/spf13/hyde"
+
+  [[module.imports]]
+    path = "github.com/brenley/hugo-mounts-remote-source"
+    [[module.imports.mounts]]
+      source = "README.md"
+      target = "content/posts/remoteProject.md"
